--- a/parts/header.html
+++ b/parts/header.html
@@ -1,74 +1,35 @@
-<!-- wp:html -->
-<!-- Topbar -->
-<div class="py-3 text-sm bg-gray-700">
-  <div class="container !mx-auto flex items-center justify-between">
-    <!-- Secondary Links -->
-    <ul class="secondary-menu">
-      <li>
-        <a href="#">Example Link</a>
-      </li>
-      <li>
-        <a href="#">Example Link</a>
-      </li>
-      <li>
-        <a href="#">Example Link</a>
-      </li>
-      <li>
-        <a href="#">Example Link</a>
-      </li>
-    </ul>
-    <!-- Regular Text -->
-    <div class="text-gray-200 !mt-0">
-      Some Regular Text
-    </div>
-  </div>
-</div>
-<!-- Header midsection -->
-<div class="container !mx-auto flex !flex-nowrap relative items-center py-5 justify-between w-full">
-  <!-- Text Logo -->
-  <a href="#" class="text-red-500 font-bold text-3xl font-['Pacifico']">
-    Udemy
-  </a>
-  <!-- Image Logo -->
-  <!-- <a href="#">
-    <img src="public/logoipsum.png" width="142">
-  </a> -->
-  <!-- Search Form -->
-  <form class="header-search-form">
-    <input type="text" placeholder="Search">
-  </form>
+<!-- wp:group {"style":{"typography":{"fontSize":"0.875rem","lineHeight":"1.3"},"spacing":{"padding":{"top":"0.75rem","bottom":"0.75rem"}}},"backgroundColor":"u-gray-700","layout":{"type":"flex","flexWrap":"nowrap"}} -->
+<div class="wp-block-group has-u-gray-700-background-color has-background" style="padding-top:0.75rem;padding-bottom:0.75rem;font-size:0.875rem;line-height:1.3"><!-- wp:group {"className":"container !mx-auto flex items-center justify-between","layout":{"type":"default"}} -->
+  <div class="wp-block-group container !mx-auto flex items-center justify-between"><!-- wp:navigation {"ref":95,"textColor":"u-gray-200","className":"secondary-menu","style":{"spacing":{"blockGap":"1rem"}}} /-->
+  
+  <!-- wp:paragraph {"style":{"spacing":{"margin":{"top":"0","right":"0","bottom":"0","left":"0"}}},"textColor":"u-gray-200"} -->
+  <p class="has-u-gray-200-color has-text-color" style="margin-top:0;margin-right:0;margin-bottom:0;margin-left:0">Lorem</p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:group --></div>
+  <!-- /wp:group -->
+
+  <!-- wp:group {"style":{"spacing":{"padding":{"top":"1.25rem","bottom":"1.25rem"},"margin":{"top":"0px","bottom":"0px"},"blockGap":"0px"}},"className":"container !mx-auto w-full","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group container !mx-auto w-full" style="margin-top:0px;margin-bottom:0px;padding-top:1.25rem;padding-bottom:1.25rem"><!-- wp:site-title {"style":{"typography":{"fontSize":"1.88rem","lineHeight":2.3,"fontStyle":"normal","fontWeight":"700"}},"textColor":"u-primary","fontFamily":"u-pacifico"} /-->
+
+  <!-- wp:search {"label":"Search","width":100,"widthUnit":"%","buttonText":"Search","className":"header-search-form"} /-->
+  
+  <!-- wp:html -->
   <!-- Header Tools -->
-  <div class="wp-block-udemy-plus-header-tools">
-    <!-- Signin Modal Link -->
-    <a class="signin-link open-modal" href="#signin-modal">
-      <div class="signin-icon">
-        <i class="bi bi-person-circle"></i>
-      </div>
-      <div class="signin-text">
-        <small>Hello, Sign in</small>
-        My Account
-      </div>
-    </a>
-  </div>
-</div>
-<!-- Primary Menu -->
-<div class="container !mx-auto flex-nowrap justify-start pb-4 primary-menu">
-  <ul>
-    <li>
-      <a href="#">Example Link</a>
-    </li>
-    <li>
-      <a href="#">Example Link</a>
-    </li>
-    <li>
-      <a href="#">Example Link</a>
-    </li>
-    <li>
-      <a href="#">Example Link</a>
-    </li>
-    <li>
-      <a href="#">Example Link</a>
-    </li>
-  </ul>
-</div>
-<!-- /wp:html -->
+          <div class="wp-block-udemy-plus-header-tools">
+            <!-- Signin Modal Link -->
+            <a class="signin-link open-modal" href="#signin-modal">
+              <div class="signin-icon">
+                <i class="bi bi-person-circle"></i>
+              </div>
+              <div class="signin-text">
+                <small>Hello, Sign in</small>
+                My Account
+              </div>
+            </a>
+          </div>
+  <!-- /wp:html --></div>
+  <!-- /wp:group -->
+
+  <!-- wp:group {"style":{"spacing":{"padding":{"top":"0px","right":"0px","bottom":"1rem","left":"0px"},"blockGap":"2.5rem"},"border":{"width":"0px","style":"none","radius":"0px"}},"className":"container !mx-auto","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group container !mx-auto" style="border-style:none;border-width:0px;border-radius:0px;padding-top:0px;padding-right:0px;padding-bottom:1rem;padding-left:0px"><!-- wp:navigation {"ref":95,"textColor":"u-gray-700","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"},"style":{"spacing":{"blockGap":"var:preset|spacing|50"}}} /--></div>
+<!-- /wp:group -->
