--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,46 +1,53 @@
-<!-- wp:html -->
-<div class="container !mx-auto">
-  <div class="grid grid-cols-3 gap-4">
-    <div>
-      <h6 class="text-white font-medium text-lg mb-2">Footer Column 1</h6>
-      <p class="text-white">
-        This is an example of a footer column.
-      </p>
-    </div>
-    <div>
-      <h6 class="text-white font-medium text-lg mb-2">Footer Column 2</h6>
-      <p class="text-white">
-        This is an example of a footer column.
-      </p>
-    </div>
-    <div>
-      <h6 class="text-white font-medium text-lg mb-2">Footer Column 3</h6>
-      <p class="text-white">
-        This is an example of a footer column.
-      </p>
-    </div>
-  </div>
-  <hr class="text-white my-12">
-  <div class="grid grid-cols-2 gap-4">
-    <div>
-      <p class="text-white">
-        © All rights reserved.
-      </p>
-    </div>
-    <div class="text-right">
-      <a class="text-white ml-2" href="#">
-        <i class="bi bi-twitter"></i>
-      </a>
-      <a class="text-white ml-2" href="#">
-        <i class="bi bi-facebook"></i>
-      </a>
-      <a class="text-white ml-2" href="#">
-        <i class="bi bi-instagram"></i>
-      </a>
-      <a class="text-white ml-2" href="#">
-        <i class="bi bi-youtube"></i>
-      </a>
-    </div>
-  </div>
-</div>
-<!-- /wp:html -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"4rem","right":"4rem","bottom":"4rem","left":"4rem"}}},"backgroundColor":"u-gray-700","textColor":"u-white","className":"container !mx-auto","layout":{"type":"default"}} -->
+<div class="wp-block-group container !mx-auto has-u-white-color has-u-gray-700-background-color has-text-color has-background" style="padding-top:4rem;padding-right:4rem;padding-bottom:4rem;padding-left:4rem"><!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"0","left":"0"}}}} -->
+  <div class="wp-block-columns"><!-- wp:column -->
+  <div class="wp-block-column"><!-- wp:heading {"level":6,"style":{"typography":{"fontStyle":"normal","fontWeight":"500","fontSize":"1.13rem"},"spacing":{"padding":{"top":"0","right":"0","bottom":"0.5rem","left":"0"},"margin":{"top":"0px","right":"0px","bottom":"0px","left":"0px"}}},"textColor":"u-white"} -->
+  <h6 class="wp-block-heading has-u-white-color has-text-color" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-top:0;padding-right:0;padding-bottom:0.5rem;padding-left:0;font-size:1.13rem;font-style:normal;font-weight:500">Footer Column 1<br></h6>
+  <!-- /wp:heading -->
+  
+  <!-- wp:paragraph {"style":{"spacing":{"padding":{"top":"0px","right":"0px","bottom":"0px","left":"0px"},"margin":{"top":"0px","right":"0px","bottom":"0px","left":"0px"}}},"textColor":"u-white"} -->
+  <p class="has-u-white-color has-text-color" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px">This is an example of a footer column.</p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:column -->
+  
+  <!-- wp:column -->
+  <div class="wp-block-column"><!-- wp:heading {"level":6,"style":{"typography":{"fontStyle":"normal","fontWeight":"500","fontSize":"1.13rem"},"spacing":{"padding":{"top":"0","right":"0","bottom":"0.5rem","left":"0"}}},"textColor":"u-white"} -->
+  <h6 class="wp-block-heading has-u-white-color has-text-color" style="padding-top:0;padding-right:0;padding-bottom:0.5rem;padding-left:0;font-size:1.13rem;font-style:normal;font-weight:500">Footer Column 2<br></h6>
+  <!-- /wp:heading -->
+  
+  <!-- wp:paragraph {"style":{"spacing":{"padding":{"top":"0px","right":"0px","bottom":"0px","left":"0px"},"margin":{"top":"0px","right":"0px","bottom":"0px","left":"0px"}}},"textColor":"u-white"} -->
+  <p class="has-u-white-color has-text-color" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px">This is an example of a footer column.</p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:column -->
+  
+  <!-- wp:column -->
+  <div class="wp-block-column"><!-- wp:heading {"level":6,"style":{"typography":{"fontStyle":"normal","fontWeight":"500","fontSize":"1.13rem"},"spacing":{"padding":{"top":"0","right":"0","bottom":"0.5rem","left":"0"}}},"textColor":"u-white"} -->
+  <h6 class="wp-block-heading has-u-white-color has-text-color" style="padding-top:0;padding-right:0;padding-bottom:0.5rem;padding-left:0;font-size:1.13rem;font-style:normal;font-weight:500">Footer Column 2<br></h6>
+  <!-- /wp:heading -->
+  
+  <!-- wp:paragraph {"style":{"spacing":{"padding":{"top":"0px","right":"0px","bottom":"0px","left":"0px"},"margin":{"top":"0px","right":"0px","bottom":"0px","left":"0px"}}},"textColor":"u-white"} -->
+  <p class="has-u-white-color has-text-color" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px">This is an example of a footer column.</p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:column --></div>
+  <!-- /wp:columns -->
+  
+  <!-- wp:separator {"style":{"spacing":{"margin":{"top":"3rem","bottom":"3rem"}}},"backgroundColor":"u-white","className":"is-style-default"} -->
+  <hr class="wp-block-separator has-text-color has-u-white-color has-alpha-channel-opacity has-u-white-background-color has-background is-style-default" style="margin-top:3rem;margin-bottom:3rem"/>
+  <!-- /wp:separator -->
+  
+  <!-- wp:group {"className":"container !mx-auto","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+  <div class="wp-block-group container !mx-auto"><!-- wp:paragraph {"textColor":"u-white"} -->
+  <p class="has-u-white-color has-text-color"><br>© All rights reserved.</p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:social-links {"iconColor":"u-white","iconColorValue":"rgb(255,255,255)","openInNewTab":true,"size":"has-small-icon-size","style":{"spacing":{"blockGap":{"top":"0.5rem","left":"0.5rem"}}},"className":"is-style-logos-only","layout":{"type":"flex","justifyContent":"left"}} -->
+  <ul class="wp-block-social-links has-small-icon-size has-icon-color is-style-logos-only"><!-- wp:social-link {"url":"#","service":"twitter"} /-->
+  
+  <!-- wp:social-link {"url":"#","service":"facebook"} /-->
+  
+  <!-- wp:social-link {"url":"#","service":"instagram"} /-->
+  
+  <!-- wp:social-link {"url":"#","service":"youtube"} /--></ul>
+  <!-- /wp:social-links --></div>
+  <!-- /wp:group --></div>
+  <!-- /wp:group -->
