--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,6 +1,6 @@
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"4rem","right":"4rem","bottom":"4rem","left":"4rem"}}},"backgroundColor":"u-gray-700","textColor":"u-white","className":"container !mx-auto","layout":{"type":"default"}} -->
-<div class="wp-block-group container !mx-auto has-u-white-color has-u-gray-700-background-color has-text-color has-background" style="padding-top:4rem;padding-right:4rem;padding-bottom:4rem;padding-left:4rem"><!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"0","left":"0"}}}} -->
-  <div class="wp-block-columns"><!-- wp:column -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"4rem","right":"0rem","bottom":"4rem","left":"0rem"}}},"backgroundColor":"u-gray-700","textColor":"u-white","layout":{"type":"default"}} -->
+<div class="wp-block-group has-u-white-color has-u-gray-700-background-color has-text-color has-background" style="padding-top:4rem;padding-right:0rem;padding-bottom:4rem;padding-left:0rem"><!-- wp:columns {"style":{"spacing":{"blockGap":{"top":"0","left":"0"}}},"className":"container !mx-auto"} -->
+  <div class="wp-block-columns container !mx-auto"><!-- wp:column -->
   <div class="wp-block-column"><!-- wp:heading {"level":6,"style":{"typography":{"fontStyle":"normal","fontWeight":"500","fontSize":"1.13rem"},"spacing":{"padding":{"top":"0","right":"0","bottom":"0.5rem","left":"0"},"margin":{"top":"0px","right":"0px","bottom":"0px","left":"0px"}}},"textColor":"u-white"} -->
   <h6 class="wp-block-heading has-u-white-color has-text-color" style="margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;padding-top:0;padding-right:0;padding-bottom:0.5rem;padding-left:0;font-size:1.13rem;font-style:normal;font-weight:500">Footer Column 1<br></h6>
   <!-- /wp:heading -->
@@ -31,8 +31,8 @@
   <!-- /wp:column --></div>
   <!-- /wp:columns -->
   
-  <!-- wp:separator {"style":{"spacing":{"margin":{"top":"3rem","bottom":"3rem"}}},"backgroundColor":"u-white","className":"is-style-default"} -->
-  <hr class="wp-block-separator has-text-color has-u-white-color has-alpha-channel-opacity has-u-white-background-color has-background is-style-default" style="margin-top:3rem;margin-bottom:3rem"/>
+  <!-- wp:separator {"style":{"spacing":{"margin":{"top":"3rem","bottom":"3rem"}}},"backgroundColor":"u-white","className":"container !mx-auto"} -->
+  <hr class="wp-block-separator has-text-color has-u-white-color has-alpha-channel-opacity has-u-white-background-color has-background container !mx-auto" style="margin-top:3rem;margin-bottom:3rem"/>
   <!-- /wp:separator -->
   
   <!-- wp:group {"className":"container !mx-auto","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
