--- a/assets/single.html
+++ b/assets/single.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="public/index.css">
   </head>
   <body>
     <!-- Header -->
@@ -176,7 +177,7 @@
           </h2>
           <!-- comment-->
           <div class="flex items-start py-6 border-b border-b-gray-200">
-            <img class="rounded-full w-16" src="public/comment-author.jpg">
+            <img class="rounded-full w-16" src="public/author.jpg">
             <div class="pl-4">
               <h6 class="mb-2 font-medium">Laura Willson</h6>
               <p class="mb-2">
@@ -191,7 +192,7 @@
           </div>
           <!-- comment-->
           <div class="flex items-start py-6 border-b border-b-gray-200">
-            <img class="rounded-full w-16" src="public/comment-author.jpg">
+            <img class="rounded-full w-16" src="public/author.jpg">
             <div class="pl-4">
               <h6 class="mb-2 font-medium">Laura Willson</h6>
               <p class="mb-2">
